--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,18 @@
-
+<!-- <h2><strong>Ex n°1/3/4</strong> Couleur des DIV</h2>
+<app-father></app-father>
+<br />
+<h2><strong>Ex n°2</strong> Carte Visite</h2>
+<app-carte></app-carte>
+<br />
+<br />
 <h2><strong>Ex n°5</strong> Mini plateforme de recrutement</h2>
+<app-cv></app-cv>
+<h2><strong>TP2</strong></h2> !-->
+<!--TP2-->
+<h1><strong>TP2</strong></h1>
+<h2><strong>Ex n°1</strong> Word</h2>
+<app-word></app-word>
+<h2><strong>Ex n°2</strong> Rainbow</h2>
+<app-rainbow></app-rainbow>
+<h2><strong>Ex n°5 TP1 avec ngFor</strong> Mini plateforme de recrutement</h2>
 <app-cv></app-cv>
